--- a/templates/menues.html
+++ b/templates/menues.html
@@ -356,10 +356,13 @@
                       <li>
                         <a href="{% url 'categorias_listado' %}"><i class="fa fa-sitemap"></i>Categorías</a>
                       </li>
-                                           
                       <li>
                         <a href="{% url 'depositos_listado' %}"><i class="fa fa-cubes"></i>Depósitos/Ubicación</a>
-                      </li>         
+                      </li>
+                      <li>
+                        
+                        <a href="#" id="prod_buscar_datos"><i class="fa fa-list-alt"></i>Consulta Productos</a>
+                      </li>          
                     </ul>
                   </div>                 
               </div>
