--- a/staticfiles/css/comprobantes.css
+++ b/staticfiles/css/comprobantes.css
@@ -26,3 +26,4 @@
 .botonera a{margin-left:5px;}
 .cpb .unidades{font-size:11px;font-weight:normal;padding-bottom:3px;}
 .cpb .ayuda_form{float: right;font-weight: bold;font-size: 8px;}
+.negrita {font-weight:bold;}
