--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% load static from staticfiles %}
 {% load i18n %}
-
+{% load compress %}
 
 <!DOCTYPE HTML>
 <html>
@@ -12,7 +12,7 @@
         <link rel="shortcut icon" href="{% static 'images/logo_iron.png' %}"  type="image/png">        
         <!--Mobile specific meta goodness :)-->
         <meta name="viewport" content="width=device-width, initial-scale=1">        
-        
+        {% compress css file base %}
         <link href="{% static 'fonts/Ubuntu.css' %}" rel="stylesheet" type="text/css"/>
         <link href="{% static 'fonts/OpenSans.css' %}" rel="stylesheet" type="text/css"/>
         <link href="{% static 'font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css"/>
@@ -21,10 +21,10 @@
         <link href="{% static 'css/uniform.default.css' %}" rel="stylesheet" type="text/css"/>
         
         <link href="{% static 'bootstrap-datepicker/css/datepicker3.css' %}" rel="stylesheet" type="text/css"/>        
-        <link href="{% static 'css/components.css'%}?{% now "Ymd"%}"  rel="stylesheet" type="text/css"/>
+        <link href="{% static 'css/components.css'%}"  rel="stylesheet" type="text/css"/>
         <link href="{% static 'css/plugins.css' %}" rel="stylesheet" type="text/css"/>
-        <link href="{% static 'css/layout.css'%}?{% now "Ymd"%}" rel="stylesheet" type="text/css"/>
-        <link href="{% static 'css/extras.css'%}?{% now "Ymd"%}" rel="stylesheet" type="text/css"/>
+        <link href="{% static 'css/layout.css'%}" rel="stylesheet" type="text/css"/>
+        <link href="{% static 'css/extras.css'%}" rel="stylesheet" type="text/css"/>
         
         <link rel="stylesheet" href="{% static 'alertifyjs/css/alertify.css' %}" type="text/css" />        
         <link rel="stylesheet" href="{% static 'fonts/flaticon.css' %}" type="text/css" />
@@ -38,19 +38,25 @@
 
         
         <link rel="stylesheet" href="{% static 'css/bootstrap-chosen.css' %}" type="text/css" />
-        <link rel="stylesheet" href="{% static 'css/modificaciones.css'%}?{% now "Ymd"%}" />
+        <link rel="stylesheet" href="{% static 'css/modificaciones.css'%}" />
         <link href="{% static 'css/toastr.min.css' %}" rel="stylesheet" type="text/css"/> 
         
         {% block extra_css %}
         {% endblock %}          
-
+        {% endcompress %} 
+        
         <script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script> 
         <script src="{% static 'js/respond.min.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/html5shiv.js' %}" type="text/javascript"></script>     
         <script src="{% static 'js/jquery-ui.js' %}" type="text/javascript" ></script>
+        
         <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>   
         <script src="{% static 'js/less-1.3.3.min.js' %}" type="text/javascript"></script>  
         <script src="{% static 'modal/js/modal.js' %}"></script>
+        <script src="{% static 'DataTables/moment.min.js' %}" type="text/javascript"></script>        
+        <script src="{% static 'js/jquery.waypoints.min.js' %}" type="text/javascript"></script>   
+
+        {% compress js  file base  %}
         <script src="{% static 'js/jquery-migrate.min.js' %}" type="text/javascript"></script>        
         <script src="{% static 'js/html5shiv.js' %}" type="text/javascript"></script>                
         <script src="{% static 'js/sorttable.js' %}" type="text/javascript"></script>
@@ -65,9 +71,9 @@
 
         <script src="{% static 'js/metronic.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/layout.js' %}" type="text/javascript"></script>
-        <script src="{% static 'DataTables/moment.min.js' %}" type="text/javascript"></script>        
-        <script src="{% static 'js/jquery.waypoints.min.js' %}" type="text/javascript"></script>        
-
+             
+        {% endcompress %} 
+        {% compress js file extra %}
         {% block extra_js %}
           <script src="{% static 'DataTables/datatables.js' %}" type="text/javascript"></script>            
           <script src="{% static 'DataTables/datetime-moment.js' %}" type="text/javascript"></script>                  
@@ -79,9 +85,9 @@
           <script src="{% static 'DataTables/FixedHeader-3.1.3/js/dataTables.fixedHeader.min.js' %}" type="text/javascript"></script>    
         {% endblock %}
 
-        <script src="{% static 'js/scripts/scripts.js'%}?{% now "Ymd"%}" type="text/javascript"></script>             
-        <script src="{% static 'js/scripts/scripts_general.js'%}?{% now "Ymd"%}" type="text/javascript"></script>
-        
+        <script src="{% static 'js/scripts/scripts.js'%}" type="text/javascript"></script>             
+        <script src="{% static 'js/scripts/scripts_general.js'%}" type="text/javascript"></script>
+        {% endcompress %}
 </head>
         
       {% block principal %}          
@@ -102,6 +108,7 @@
            $('[data-toggle=tooltip]').tooltip();   
         });
       </script> 
+      {% compress js inline %}
       {% block extra_js_final %}
       {% endblock extra_js_final %} 
       {% if empresa.afip_categoria %}
@@ -109,5 +116,5 @@
            alertify.warningAlert("<b>Su abono Mensual se encuentra Vencido.<br>Por favor comunicarse a los teléfonos de la Empresa.<br>¡Muchas Gracias!</b>");            
            </script>   
       {% endif %} 
-
+       {% endcompress %}
 </html>
