--- a/templates/graficos.html
+++ b/templates/graficos.html
@@ -1,8 +1,11 @@
 {% load static from staticfiles %}
 {% load i18n l10n %}
 {% load humanize %}
+{% load compress %}
+ {% compress js  %}
 <script src="{% static 'js/highcharts.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/exporting.js' %}" type="text/javascript"></script>
+{% endcompress %} 
 <div class="row">  
     <div class="col-sm-7 cerca">
        <div class="portlet box">
@@ -52,7 +55,7 @@
 
 
 
-
+ {% compress js  inline %}
 <script type="text/javascript">
 jQuery(document).ready(function($) {          
        var chart1 = new Highcharts.chart('grafico1', {
@@ -184,3 +187,4 @@ Highcharts.chart('grafico2', {
  });
 
 </script>
+{% endcompress %}
