--- a/staticfiles/css/modificaciones.css
+++ b/staticfiles/css/modificaciones.css
@@ -511,3 +511,23 @@ textarea.form-control{height:auto}
     font-weight: bold;
    border-top: 1px solid #707070;   
 }
+
+.chosen-container-single .chosen-single {
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding;
+    background-clip: padding-box;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    color: #555555;
+    display: block;
+    height: 25px;
+    overflow: hidden;
+    line-height: 25px;
+    padding: 0 0 0 8px;
+    position: relative;
+    text-decoration: none;
+    white-space: nowrap;
+}
