--- a/templates/base.html
+++ b/templates/base.html
@@ -28,13 +28,17 @@
         
         <link rel="stylesheet" href="{% static 'alertifyjs/css/alertify.css' %}" type="text/css" />        
         <link rel="stylesheet" href="{% static 'fonts/flaticon.css' %}" type="text/css" />
-        <link rel="stylesheet" href="{% static 'DataTables/datatables.css' %}" type="text/css" />        
-        <link rel="stylesheet" href="{% static 'DataTables/DataTables-1.10.15/css/dataTables.bootstrap.min.css' %}" type="text/css" />        
-        <link rel="stylesheet" href="{% static 'DataTables/Buttons-1.5.1/css/buttons.bootstrap.min.css' %}" type="text/css" />
-        <link rel="stylesheet" href="{% static 'DataTables/FixedHeader-3.1.2/css/fixedHeader.bootstrap.min.css' %}" type="text/css" />
-        <link rel="stylesheet" href="{% static 'DataTables/FixedHeader-3.1.2/css/fixedHeader.dataTables.min.css' %}" type="text/css" />
-        <link rel="stylesheet" href="{% static 'DataTables/Buttons-1.5.1/css/buttons.dataTables.min.css' %}" type="text/css" />
-        <link rel="stylesheet" href="{% static 'DataTables/Buttons-1.5.1/css/buttons.bootstrap.min.css' %}" type="text/css" />
+        {% endcompress %} 
+
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css"/>
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.6.5/css/buttons.bootstrap4.min.css"/>
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/colreorder/1.5.3/css/colReorder.bootstrap4.min.css"/>
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedcolumns/3.3.2/css/fixedColumns.bootstrap4.min.css"/>
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedheader/3.1.7/css/fixedHeader.bootstrap4.min.css"/>
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.6/css/responsive.bootstrap4.min.css"/>
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/scroller/2.0.3/css/scroller.bootstrap4.min.css"/>
+
+        <link rel="stylesheet" href="{% static 'DataTables/datatables.css' %}" type="text/css" /> 
 
         
         <link rel="stylesheet" href="{% static 'css/bootstrap-chosen.css' %}" type="text/css" />
@@ -43,7 +47,7 @@
         
         {% block extra_css %}
         {% endblock %}          
-        {% endcompress %} 
+        
         
         <script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script> 
         <script src="{% static 'js/respond.min.js' %}" type="text/javascript"></script>
@@ -73,18 +77,12 @@
         <script src="{% static 'js/layout.js' %}" type="text/javascript"></script>
              
         {% endcompress %} 
-        {% compress js file extra %}
+        
         {% block extra_js %}
-          <script src="{% static 'DataTables/datatables.js' %}" type="text/javascript"></script>            
-          <script src="{% static 'DataTables/datetime-moment.js' %}" type="text/javascript"></script>                  
-          <script src="{% static 'DataTables/Responsive-2.2.1/js/dataTables.responsive.min.js' %}" type="text/javascript"></script>
-          <script src="{% static 'DataTables/Responsive-2.2.1/js/responsive.bootstrap.min.js' %}" type="text/javascript"></script>
-          <script src="{% static 'DataTables/Buttons-1.5.1/js/dataTables.buttons.min.js' %}" type="text/javascript"></script>
-          <script src="{% static 'DataTables/Buttons-1.5.1/js/buttons.colVis.min.js' %}" type="text/javascript"></script>
-          <script src="{% static 'DataTables/Buttons-1.5.1/js/buttons.bootstrap.min.js' %}" type="text/javascript"></script>
-          <script src="{% static 'DataTables/FixedHeader-3.1.3/js/dataTables.fixedHeader.min.js' %}" type="text/javascript"></script>    
+          <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.22/b-1.6.5/b-colvis-1.6.5/b-flash-1.6.5/b-html5-1.6.5/b-print-1.6.5/r-2.2.6/sc-2.0.3/datatables.min.js"></script>
+          <script src="{% static 'DataTables/datetime-moment.js' %}" type="text/javascript"></script>   
         {% endblock %}
-
+        {% compress js file extra %}
         <script src="{% static 'js/scripts/scripts.js'%}" type="text/javascript"></script>             
         <script src="{% static 'js/scripts/scripts_general.js'%}" type="text/javascript"></script>
         {% endcompress %}
