--- a/templates/base2.html
+++ b/templates/base2.html
@@ -1,5 +1,6 @@
 {% load static from staticfiles %}
 {% load i18n %}
+{% load compress %}
 
 <!DOCTYPE HTML>
 <html>
@@ -10,7 +11,8 @@
         <META NAME="Description" CONTENT="{% block description %}SISTEMA CONTABLE IRON{% endblock %}">
         <link rel="shortcut icon" href="{% static 'images/logo_iron.png' %}"  type="image/png">        
         <!--Mobile specific meta goodness :)-->
-        <meta name="viewport" content="width=device-width, initial-scale=1">                
+        <meta name="viewport" content="width=device-width, initial-scale=1">        
+        {% compress css file base %}
         <link href="{% static 'fonts/Ubuntu.css' %}" rel="stylesheet" type="text/css"/>
         <link href="{% static 'fonts/OpenSans.css' %}" rel="stylesheet" type="text/css"/>
         <link href="{% static 'font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css"/>
@@ -25,7 +27,8 @@
         <link href="{% static 'css/extras.css'%}" rel="stylesheet" type="text/css"/>
         
         <link rel="stylesheet" href="{% static 'alertifyjs/css/alertify.css' %}" type="text/css" />        
-        <link rel="stylesheet" href="{% static 'fonts/flaticon.css' %}" type="text/css" />        
+        <link rel="stylesheet" href="{% static 'fonts/flaticon.css' %}" type="text/css" />
+        {% endcompress %} 
 
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css"/>
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.6.5/css/buttons.bootstrap4.min.css"/>
@@ -34,44 +37,55 @@
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedheader/3.1.7/css/fixedHeader.bootstrap4.min.css"/>
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.6/css/responsive.bootstrap4.min.css"/>
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/scroller/2.0.3/css/scroller.bootstrap4.min.css"/>
+
+        <link rel="stylesheet" href="{% static 'DataTables/datatables.css' %}" type="text/css" /> 
+
         
-        <link rel="stylesheet" href="{% static 'DataTables/datatables.css' %}" type="text/css" />         
         <link rel="stylesheet" href="{% static 'css/bootstrap-chosen.css' %}" type="text/css" />
         <link rel="stylesheet" href="{% static 'css/modificaciones.css'%}" />
         <link href="{% static 'css/toastr.min.css' %}" rel="stylesheet" type="text/css"/> 
         
         {% block extra_css %}
         {% endblock %}          
-                
+        
+        
         <script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script> 
         <script src="{% static 'js/respond.min.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/html5shiv.js' %}" type="text/javascript"></script>     
-        <script src="{% static 'js/jquery-ui.js' %}" type="text/javascript" ></script>        
+        <script src="{% static 'js/jquery-ui.js' %}" type="text/javascript" ></script>
+        
         <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>   
         <script src="{% static 'js/less-1.3.3.min.js' %}" type="text/javascript"></script>  
         <script src="{% static 'modal/js/modal.js' %}"></script>
         <script src="{% static 'DataTables/moment.min.js' %}" type="text/javascript"></script>        
-        <script src="{% static 'js/jquery.waypoints.min.js' %}" type="text/javascript"></script>           
+        <script src="{% static 'js/jquery.waypoints.min.js' %}" type="text/javascript"></script>   
+
+        {% compress js  file base  %}
         <script src="{% static 'js/jquery-migrate.min.js' %}" type="text/javascript"></script>        
         <script src="{% static 'js/html5shiv.js' %}" type="text/javascript"></script>                
         <script src="{% static 'js/sorttable.js' %}" type="text/javascript"></script>
         <script src="{% static 'bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js' %}" type="text/javascript"></script>               
         <script src="{% static 'alertifyjs/alertify.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/jquery.uniform.min.js' %}" type="text/javascript" ></script>                       
+        <script src="{% static 'js/jquery.uniform.min.js' %}" type="text/javascript" ></script>        
+               
         <script src="{% static 'js/chosen.jquery.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/toastr.min.js' %}" type="text/javascript"></script>             
+        <script src="{% static 'js/toastr.min.js' %}" type="text/javascript"></script>
+              
         <script src="{% static 'bootstrap-datepicker/js/bootstrap-datepicker.js' %}" type="text/javascript"></script>        
+
         <script src="{% static 'js/metronic.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/layout.js' %}" type="text/javascript"></script>
              
+        {% endcompress %} 
         
         {% block extra_js %}
           <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.22/b-1.6.5/b-colvis-1.6.5/b-flash-1.6.5/b-html5-1.6.5/b-print-1.6.5/r-2.2.6/sc-2.0.3/datatables.min.js"></script>
           <script src="{% static 'DataTables/datetime-moment.js' %}" type="text/javascript"></script>   
         {% endblock %}
-        
+        {% compress js file extra %}
         <script src="{% static 'js/scripts/scripts.js'%}" type="text/javascript"></script>             
         <script src="{% static 'js/scripts/scripts_general.js'%}" type="text/javascript"></script>
+        {% endcompress %}
 </head>
         
       {% block principal %}          
@@ -92,6 +106,7 @@
            $('[data-toggle=tooltip]').tooltip();   
         });
       </script> 
+      {% compress js inline %}
       {% block extra_js_final %}
       {% endblock extra_js_final %} 
       {% if empresa.afip_categoria %}
@@ -99,4 +114,5 @@
            alertify.warningAlert("<b>Su abono Mensual se encuentra Vencido.<br>Por favor comunicarse a los teléfonos de la Empresa.<br>¡Muchas Gracias!</b>");            
            </script>   
       {% endif %} 
+       {% endcompress %}
 </html>
