--- a/templates/general/facturas/facturaQR.html
+++ b/templates/general/facturas/facturaQR.html
@@ -20,7 +20,7 @@
                         margin-left: 0.5cm; 
                                               
                         {%if facturado %}
-                          height: 3.8cm;
+                          height: 3.5cm;
                           bottom:0.5cm;
                         {% else %}
                           height: 2.5cm;
@@ -187,9 +187,9 @@
         <table width="100%" align="center">
           <tr>
             <td width="30%" rowspan="3" align="center">
-              <img src="data:image/png;base64,{{qrcode}}" alt="afip" />
+              <img src="data:image/png;base64,{{qrcode}}" alt="afip" height="90" />
             </td>
-            <td width="70%" align="left"> <img  src="{% static 'images/logo_afip.png' %}" alt="afip" width="100" height="40" align="absmiddle" /></td>
+            <td width="70%" align="left"> <img  src="{% static 'images/logo_afip.png' %}" alt="afip" width="80" height="30" align="absmiddle" /></td>
           </tr> 
           <tr>
             <td align="left" ><span class="cae_autorizado">Comprobante Autorizado</span></td>
