Agregada entrada en menu de Importar_productos, corregido campos Decimal en el importador

--- a/templates/menues.html
+++ b/templates/menues.html
@@ -176,7 +176,12 @@
                       {% endif %}
                       <li>                        
                         <a href="#" id="prod_buscar_datos"><i class="fa fa-list-alt"></i>Consulta Productos</a>
-                      </li>             
+                      </li>
+                      {% if 'prod_productos_abm' in permisos_grupo %}
+                        <li>
+                        <a href="{% url 'importar_productos' %}"><i class="fa fa-tags"></i>Importar Productos/Servicios</a>
+                      </li>
+                      {% endif %}
                                    
                     </ul>
                   </div>  
