Nuevo boton para imprimir los codigos QR, similar al de los CB

--- a/templates/productos/producto_precios.html
+++ b/templates/productos/producto_precios.html
@@ -40,7 +40,8 @@
                     <div class="btn-group " style="float:left;margin-right:20px;margin-bottom:10px;"> 
                     <button class="btn btn-sm green-meadow" value="" style="margin-right:20px;" id="btnActualizar">Actualizar Precios</button>
                     <button class="btn btn-sm green-meadow" value="" style="margin-right:20px;" id="btnImprimirCBS">Imprimir Cód.Barras</button>
-                    
+                    <button class="btn btn-sm green-meadow" value="" style="margin-right:20px;" id="btnImprimirQRS">Imprimir QRs</button>
+
                     </div>               
                     <table id="dataTables-lprecios" style="display:none;" class="table table-striped compact table-hover table-no-bordered tabla_nueva nowrap">         
                         <thead>
